fixed overflow for mobile view

--- a/Equallizer-landing-page/index.css
+++ b/Equallizer-landing-page/index.css
@@ -6,133 +6,128 @@
 }
 
 body {
-  width: 90vw;
-  overflow-x: hidden;
   font-family: "IBM Plex Sans";
   color: #191826;
-}
-body::before {
-  content: "";
-  position: absolute;
-  margin-top: -10rem;
-  width: 100%;
-  height: 100%;
-  background: url("assets/bg-main-desktop.png") no-repeat;
-  background-size: cover;
+  background-image: url("assets/bg-main-desktop.png");
+  background-repeat: no-repeat;
+  background-size: auto;
+  background-position: top;
+  margin: auto;
 }
 
-.header {
+header {
   display: flex;
   justify-content: space-between;
 }
 .headerLogo {
-  width: 12%;
-  height: 2.5%;
-  justify-self: center;
-  margin-top: 6rem;
-  margin-left: 8%;
+  margin-top: 3rem;
+  margin-left: 5rem;
 }
 .pattern1 {
-  margin-top: -3%;
-  margin-right: 0;
+  margin-top: -3rem;
+  margin-left: auto;
+  /* I need to shrink the image */
 }
-.article {
-  margin-top: -25vh;
+main {
+  width: 90vw;
   font-weight: 400;
-  font-style: normal;
-  margin-left: 8%;
+  margin: auto;
+  margin-top: -35vh;
 }
-.slogan {
-  width: 65%;
-
+h1 {
   font-weight: 700;
   font-size: 88px;
+  font-style: normal;
+  letter-spacing: -1px;
+  line-height: 88px;
+}
+p {
+  font-size: 20px;
+  line-height: 34px;
+  font-weight: 400;
+}
+.slogan {
+  width: 70%;
 }
 .details {
-  width: 59%;
-  font-weight: 400;
-  font-size: 20px;
+  width: 62%;
 }
 .blackCardContainer {
-  margin-left: 6%;
-  margin-right: 8%;
-  margin-top: 20%;
-  margin-bottom: 20%;
+  margin-top: 20rem;
   position: relative;
+}
+.blackCard {
   background-color: #191826;
-  width: 100%;
-  height: 600px;
   border-radius: 12px;
+  height: 600px;
   display: flex;
   justify-content: space-around;
 }
-
-.pattern2 {
-  width: 312px;
-  height: 448px;
-  position: relative;
-}
 .phone {
   width: 312px;
-  height: 642px;
+  /* height: 642px; */
   position: absolute;
-  left: 259px;
+  left: 12%;
+  top: -40%;
   bottom: 160px;
   z-index: 2;
 }
-
+.pattern2 {
+  position: absolute;
+  width: 35%;
+  height: 450px;
+}
 .premiumCard {
   color: #fcfaf9;
   background-color: #fa7453;
   border-radius: 12px;
-  padding: 40px;
   position: absolute;
-  right: 170px;
-  top: 160px;
   z-index: 3;
+  padding: 55px;
+  right: 12%;
+  top: 13%;
 }
-
-.premiumHeader {
+h2 {
   font-weight: 700;
   font-size: 40px;
   line-height: 52px;
 }
 .premiumDescription {
-  font-weight: 400;
-  font-size: 20px;
-  line-height: 34px;
-  width: 333px;
+  width: 20.5rem;
   margin-top: 22px;
+  margin-bottom: 39px;
 }
 .charges {
-  margin-top: 39px;
-  font-weight: 700;
   font-size: 65px;
+  font-weight: 700;
   line-height: 52px;
+  letter-spacing: 0px;
+  text-align: left;
+  margin-bottom: 46px;
 }
 .period {
-  font-weight: 400;
   font-size: 20px;
+  font-weight: 400;
   line-height: 32px;
+  letter-spacing: -0.20000000298023224px;
+  text-align: center;
 }
-.button {
-  display: flex;
-  flex-direction: column;
-  margin-top: 5%;
-}
-
-.iOS {
-  height: 61px;
+button {
   border: none;
+  width: 100%;
+  height: 61px;
   border-radius: 12px;
+}
+p button {
+  margin-top: 16px;
+}
+.iOS {
   background-color: #191826;
   color: #fcfaf9;
 
   font-weight: 700;
   font-size: 18px;
   line-height: 32px;
-
-  text-align: center;
   letter-spacing: -0.18px;
 }
 .iOS:hover {
@@ -141,17 +136,12 @@ body::before {
 }
 
 .android {
-  margin-top: 16px;
-  height: 61px;
-  border: none;
   border-radius: 12px;
   background-color: #fcfaf9;
 
   font-weight: 700;
   font-size: 18px;
   line-height: 32px;
-
-  text-align: center;
   letter-spacing: -0.18px;
 }
 
@@ -160,13 +150,14 @@ body::before {
   background-color: #ffb964;
 }
 
-.footer {
-  margin-top: 10%;
+footer {
+  width: 90vw;
+  margin: auto;
+  margin-top: 25vh;
+  margin-bottom: 10vh;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
-  margin-left: 8%;
-  margin-bottom: 10%;
+  justify-content: space-between;
 }
 
 .copyright {
@@ -197,31 +188,21 @@ svg:hover path {
     margin: 0;
     padding: 0;
   }
-  body::before {
-    content: "";
-    position: absolute;
-    margin-top: -10rem;
-    margin-left: -10rem;
-    width: 100%;
-    height: 100%;
-    background: url("assets/bg-main-tablet.png") repeat-y;
-    background-size: cover;
-  }
-
-  .headerLogo {
-    width: 26%;
-    height: 25%;
-    justify-self: center;
-    margin-top: 6%;
-    margin-left: 5%;
+  body {
+    font-family: "IBM Plex Sans";
+    background-image: url("assets/bg-main-tablet.png");
+    background-repeat: no-repeat;
+    background-size: auto;
+    background-position: top;
+    margin: auto;
   }
   .pattern1 {
-    width: 226.67px;
-    height: 380px;
-    z-index: 2;
+    width: 40%;
+    /* height: 400px; */
+    margin-left: auto;
   }
 
-  .article {
+  /* .article {
     font-weight: 400;
     font-style: normal;
     margin-left: 5%;
@@ -239,17 +220,17 @@ svg:hover path {
     font-weight: 400;
     font-size: 18px;
     margin-top: 4%;
-  }
-  .blackCardContainer {
+  } */
+  /* .blackCardContainer {
     margin-left: 5%;
     margin-right: 5%;
     margin-bottom: 40%;
     position: relative;
     display: flex;
     justify-content: space-around;
-  }
+  } */
 
-  .pattern2 {
+  /* .pattern2 {
     width: 280px;
     height: 400px;
     margin-left: 75px;
@@ -282,7 +263,7 @@ svg:hover path {
   .bottomLogo {
     width: 100%;
     margin-left: 8%;
-  }
+  } */
 }
 
 /* Mobile View */
